# VelesLibrary

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: pull_request_template.md
.github/workflows/: black.yml  main.yml
tests/: test_all.py
veleslibrary/: __init__.py
veleslibrary/questionnaires/: __init__.py  mini_cope.py  nfcs.py  questionnaires.py  rses.py  sd3.py  tls15.py  tls_15.py
veleslibrary/questionnaires/es/: __init__.py  tls_15.py
veleslibrary/questionnaires/hu/: __init__.py  tls_15.py
veleslibrary/questionnaires/pl/: __init__.py  questionnaires.py  rses.py  tipi.py  tls_15.py
veleslibrary/questionnaires/sv/: __init__.py  tls_15.py
veleslibrary/tests/: __init__.py
veleslibrary/tests/pl/: __init__.py  tests.py
